--- a/views/advanced.html
+++ b/views/advanced.html
@@ -1,33 +1,43 @@
 <div class="widget">
+    <div class="widget-header">
+        <p>Advanced filters/ Search</p>
+    </div>
     <div class="widget-body">
         <form ng-submit="testSpecialFilter(special_expression)">
             <div class="row">
-                <div class="col-md-4">
-                    <label>Special search</label>
+                <div class="col-md-12">
                     <select required ng-model="special_expression" class="form-control" ng-options="filter as filter.name for filter in special_filters">
                         <option style="display:none" value="">Select a filter</option>
                     </select>
                 </div>
+            </div>
+            <br>
+            <div class="row">
                 <div class="col-md-2" ng-repeat="(index, field) in special_expression.fields">
                     <label>{{field.label}}</label>
-
-
                     <input type="{{field.type}}" ng-model="special_expression.fields[index].value" required class="form-control" />
-
-
                 </div>
-                <div class="col-md-2">
+            </div>
+            <div class="row">
+                <div class="col-md-12 text-center">
                     <label></label>
-                    <button class="btn btn-block btn-primary ">
-                        Test
+                    <button class="btn btn-block btn-success">
+                        Run
                     </button>
                 </div>
             </div>
-        </form>
+    </div>
+    </form>
+</div>
+
+<div class="widget" ng-show="results.data.length === 0">
+    <div class="widget-body">
+        No results
+
     </div>
 </div>
 
-<div class="widget" ng-show="results.data">
+<div class="widget" ng-show="results.data.length > 0">
     <div class="widget-body">
         <div class="row">
             Results ({{results.total}})
